ui improvements on profile page, login page, and homepage

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,9 +34,7 @@
 							<a class="nav-link" href="#why">Why us</a>
 						</li>
 					</ul>
-					<button id="login-btn" class="btn btn-outline-success">
-						Login
-					</button>
+					<button id="login-btn" class="button-17">Login</button>
 				</div>
 			</nav>
 		</div>
