--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -70,42 +70,10 @@
 			</div>
 			<div class="profile-inputs">
 				<div class="container-fluid mt-5 w-75">
-					<div class="row align-items-center">
-						<div class="col-4 field field_v1">
-							<label class="ha-screen-reader" for="inputFirstName"
-								>First Name</label
-							>
-							<input
-								type="text"
-								class="form-control field__input"
-								id="inputFirstName"
-								placeholder="Taylor"
-								readonly="readonly"
-							/>
-							<span class="field__label-wrap" aria-hidden="true">
-								<span class="field__label">First name</span>
-							</span>
-						</div>
-						<div class="col-5 field field_v1">
-							<label for="inputLastName" class="ha-screen-reader"
-								>Last Name</label
-							>
-							<input
-								type="text"
-								class="form-control field__input"
-								id="inputLastName"
-								placeholder="Swift"
-								readonly="readonly"
-							/>
-							<span class="field__label-wrap" aria-hidden="true">
-								<span class="field__label">Last name</span>
-							</span>
-						</div>
-					</div>
 					<div class="row align-items-center mt-3">
 						<div class="col text-center">
 							<button
-								class="btn btn-outline-secondary"
+								class="profile-btn pfp-btn"
 								type="button"
 								id="selectProfilePicture"
 								data-bs-toggle="modal"
@@ -156,6 +124,39 @@
 							</div>
 						</div>
 					</div>
+					<div class="row align-items-center">
+						<div class="col-4 field field_v1">
+							<label class="ha-screen-reader" for="inputFirstName"
+								>First Name</label
+							>
+							<input
+								type="text"
+								class="form-control field__input"
+								id="inputFirstName"
+								placeholder="Taylor"
+								readonly="readonly"
+							/>
+							<span class="field__label-wrap" aria-hidden="true">
+								<span class="field__label">First name</span>
+							</span>
+						</div>
+						<div class="col-5 field field_v1">
+							<label for="inputLastName" class="ha-screen-reader"
+								>Last Name</label
+							>
+							<input
+								type="text"
+								class="form-control field__input"
+								id="inputLastName"
+								placeholder="Swift"
+								readonly="readonly"
+							/>
+							<span class="field__label-wrap" aria-hidden="true">
+								<span class="field__label">Last name</span>
+							</span>
+						</div>
+					</div>
+
 					<div class="row align-items-center mt-3">
 						<div
 							class="col text-center"
@@ -427,6 +428,9 @@
 				</div>
 			</div>
 		</main>
+		<footer class="footer">
+			<small class="copyright-text">&copy; Copyright 2022, UFit</small>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
