improved ui of login/signup form, specifically input border colors for incorrect/correct inputs

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -50,10 +50,7 @@
 						>
 					</span>
 				</div>
-				<p id="password-error-text" hidden="true">
-					Password must be 8 characters long, 1 uppercase, 1
-					lowercase, and 1 special/number character
-				</p>
+				<p id="password-error-text" hidden="true">Invalid Password</p>
 			</form>
 			<p id="error-text" hidden="true">
 				Invalid email/password combination
@@ -193,7 +190,9 @@
 									id="signup-password-error-text"
 									hidden="true"
 								>
-									Invalid Password
+									Password must be 8 characters long, 1
+									uppercase, 1 lowercase, and 1 special/number
+									character
 								</p>
 								<div class="signup-input field field_v1">
 									<label
