--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -942,14 +942,17 @@
 
 		<br />
 
+		
 		<div class="container">
 			<div class="row">
 				<div class="col text-center mb-2">
+					<!-- The Previous page button -->
 					<button class="btn btn-primary" type="button" id="back">
 						Previous
 					</button>
 				</div>
 				<div class="col text-center mb-2">
+					<!-- The next page button -->
 					<button class="btn btn-primary" type="button" id="next">
 						Next
 					</button>
