--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -246,7 +246,7 @@
 							<label
 								class="ha-screen-reader"
 								for="inputWorkoutLength"
-								>Average Workout Length</label
+								>Average Workout Length (in hours)</label
 							>
 							<input
 								type="text"
