Minor UI changes

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -30,6 +30,8 @@
 
 		<br />
 
+		<h2 id="noWorkoutText1"> There Is Nothing Here</h2>
+		<h5 id ="noWorkoutText2"> Go Get A Match First!</h5>
 		<!-- Entry slot 1 -->
 		<div class="accordion w-75 mx-auto" id="previousMatchesOne">
 			<div class="accordion-item">
