More updates for UI

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -962,6 +962,10 @@
 			</div>
 		</div>
 
+		<footer class="footer">
+			<small class="copyright-text">&copy; Copyright 2022, UFit</small>
+		</footer>
+
 		<script type="module" src="./src/matchHistory.js" defer></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
