centered no matches text and changed homepage btn

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -42,7 +42,7 @@
 		<div class="row mt-2 mb-2 align-items-center">
 			<div class="col text-center">
 				<button
-					class="btn btn-success btn-lg"
+					class="button-17"
 					id="findAFitLargeButton"
 					disabled="true"
 				>
