Backend is 95% done

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -962,9 +962,9 @@
 			</div>
 		</div>
 
-		<footer class="footer">
+		<!-- <footer class="footer">
 			<small class="copyright-text">&copy; Copyright 2022, UFit</small>
-		</footer>
+		</footer> -->
 
 		<script type="module" src="./src/matchHistory.js" defer></script>
 		<script
